--- a/css/style.css
+++ b/css/style.css
@@ -2,122 +2,129 @@
 @import url(./fonts.css);
 
 /* || General Styles */
-html, body {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
-  font-size: 1rem !important;
-} 
+html,
+body {
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+	font-size: 1rem !important;
+}
 
 .yellow-text {
-  color: #fed136 !important;
-  font-weight: bold;
-  padding: 0.75rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	color: #fed136 !important;
+	font-weight: bold;
+	padding: 0.75rem;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* || Utilities */
 .c-button {
-  font-size: 1.14286rem;
-  line-height: 1.15;
-  font-weight: 500;
-  padding: .85714rem 1.64286rem;
-  border: 2px solid #fed136;
-  border-radius: 35px;
-  background-image: none;
-  text-align: center;
-  cursor: pointer;
-  transition: all .3s;
-  flex-shrink: 0;
-  color: #fff;
-  background-color:#fed136;
+	font-size: 1.14286rem;
+	line-height: 1.15;
+	font-weight: 500;
+	padding: .85714rem 1.64286rem;
+	border: 2px solid #fed136;
+	border-radius: 35px;
+	background-image: none;
+	text-align: center;
+	cursor: pointer;
+	transition: all .3s;
+	flex-shrink: 0;
+	color: #fff;
+	background-color: #fed136;
 }
 
 .second-section {
-  padding: 3rem;
-  background-color: #eff3f5;
+	padding: 3rem;
+	background-color: #eff3f5;
 }
 
 .second-section-alternate {
-  padding: 3rem;
-  background-color: #fff;
-  /* max-width: 960px; */
+	padding: 3rem;
+	background-color: #fff;
+	/* max-width: 960px; */
 }
 
 .level-heading-two {
-  padding-bottom: 2rem;
-  font-weight: 700;
+	padding-bottom: 2rem;
+	font-weight: 700;
 }
 
 .level-heading-three {
-  color: #1f4b97;
+	color: #1f4b97;
 }
 
 section#contact {
-  background-color: #212529;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 2.5rem;
+	background-color: #212529;
+	background-repeat: no-repeat;
+	background-position: center;
+	padding: 2.5rem;
 }
 section#contact .section-heading {
-  color: #fff;
-  font-weight: 700;
+	color: #fff;
+	font-weight: 700;
 }
 section#contact form#contactForm .form-group {
-  margin-bottom: 1.5rem;
+	margin-bottom: 1.5rem;
 }
 section#contact form#contactForm .form-group input,
 section#contact form#contactForm .form-group textarea {
-  padding: 1.25rem;
+	padding: 1.25rem;
 }
 section#contact form#contactForm .form-group input.form-control {
-  height: auto;
+	height: auto;
 }
 section#contact form#contactForm .form-group-textarea {
-  height: 100%;
+	height: 100%;
 }
 section#contact form#contactForm .form-group-textarea textarea {
-  height: 100%;
-  min-height: 10rem;
+	height: 100%;
+	min-height: 10rem;
 }
 section#contact form#contactForm p.help-block {
-  margin: 0;
+	margin: 0;
 }
 section#contact form#contactForm .form-control:focus {
-  border-color: #fed136;
-  box-shadow: none;
+	border-color: #fed136;
+	box-shadow: none;
 }
 section#contact form#contactForm ::-webkit-input-placeholder {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  color: #ced4da;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-weight: 700;
+	color: #ced4da;
 }
 section#contact form#contactForm :-moz-placeholder {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  color: #ced4da;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-weight: 700;
+	color: #ced4da;
 }
 section#contact form#contactForm ::-moz-placeholder {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  color: #ced4da;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-weight: 700;
+	color: #ced4da;
 }
 section#contact form#contactForm :-ms-input-placeholder {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  color: #ced4da;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-weight: 700;
+	color: #ced4da;
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #1f4b97;
+	color: #fff;
+	background-color: #1f4b97;
 }
 
 .bg-info {
-  background-color:  #1f4b97!important;
+	background-color: #1f4b97 !important;
 }
 
 .text-white {
-  color: rgb(255, 255, 255) !important;
-  font-weight: bold !important;
+	color: rgb(255, 255, 255) !important;
+	font-weight: bold !important;
 }
 
 /* || Sitewide */
@@ -126,74 +133,77 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 /* || Header and Main Navigation */
 #mainNav {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #212529;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	background-color: #212529;
 }
 #mainNav .navbar-toggler {
-  padding: 0.75rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.75rem;
-  color: #fff;
-  text-transform: uppercase;
-  background-color: #fed136;
-  border: 0;
+	padding: 0.75rem;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-size: 0.75rem;
+	color: #fff;
+	text-transform: uppercase;
+	background-color: #fed136;
+	border: 0;
 }
 #mainNav .navbar-brand {
-  color: #fed136;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
-  letter-spacing: 0.0625em;
+	color: #fed136;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-weight: 700;
+	letter-spacing: 0.0625em;
 }
 #mainNav .navbar-brand img {
-  height: 1.5rem;
+	height: 1.5rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.95rem;
-  color: #fff;
-  letter-spacing: 0.0625em;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-size: 0.95rem;
+	color: #fff;
+	letter-spacing: 0.0625em;
 }
-#mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+#mainNav .navbar-nav .nav-item .nav-link.active,
+#mainNav .navbar-nav .nav-item .nav-link:hover {
+	color: #fed136;
 }
 
 @media (min-width: 992px) {
-  #mainNav {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    border: none;
-    background-color: transparent;
-    transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
-  }
-  #mainNav .navbar-brand {
-    font-size: 1.5em;
-    transition: font-size 0.3s ease-in-out;
-  }
-  #mainNav .navbar-brand img {
-    height: 2rem;
-    transition: height 0.3s ease-in-out;
-  }
-  #mainNav.navbar-shrink {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    background-color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    font-size: 1.25em;
-  }
-  #mainNav.navbar-shrink .navbar-brand svg,
-#mainNav.navbar-shrink .navbar-brand img {
-    height: 1.5rem;
-  }
-  #mainNav .navbar-nav .nav-item {
-    margin-right: 1rem;
-  }
-  #mainNav .navbar-nav .nav-item:last-child {
-    margin-right: 0;
-  }
+	#mainNav {
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem;
+		border: none;
+		background-color: transparent;
+		transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
+	}
+	#mainNav .navbar-brand {
+		font-size: 1.5em;
+		transition: font-size 0.3s ease-in-out;
+	}
+	#mainNav .navbar-brand img {
+		height: 2rem;
+		transition: height 0.3s ease-in-out;
+	}
+	#mainNav.navbar-shrink {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+		background-color: #212529;
+	}
+	#mainNav.navbar-shrink .navbar-brand {
+		font-size: 1.25em;
+	}
+	#mainNav.navbar-shrink .navbar-brand svg,
+	#mainNav.navbar-shrink .navbar-brand img {
+		height: 1.5rem;
+	}
+	#mainNav .navbar-nav .nav-item {
+		margin-right: 1rem;
+	}
+	#mainNav .navbar-nav .nav-item:last-child {
+		margin-right: 0;
+	}
 }
-
 
 /* || Pages */
 
@@ -202,16 +212,16 @@ section#contact form#contactForm :-ms-input-placeholder {
 /* Padding below the footer and lighter body text */
 
 body {
-  color: #5a5a5a;
+	color: #5a5a5a;
 }
 
 .top-nav {
-  background-color: #dee2e6;
-  padding: 0.5rem;
+	background-color: #dee2e6;
+	padding: 0.5rem;
 }
 
 .top-nav a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 /* CUSTOMIZE THE CAROUSEL
@@ -219,24 +229,24 @@ body {
 
 /* Carousel base class */
 .carousel {
-  margin-bottom: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
+	bottom: 3rem;
+	z-index: 10;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
+	height: 32rem;
 }
 .carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	height: 32rem;
 }
 
 /* MARKETING CONTENT
@@ -244,66 +254,66 @@ body {
 
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center;
+	margin-bottom: 1.5rem;
+	text-align: center;
 }
 .marketing h2 {
-  font-weight: 400;
+	font-weight: 400;
 }
 .marketing .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+	margin-right: .75rem;
+	margin-left: .75rem;
 }
 
 /* Featurettes
 ------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+	margin: 5rem 0; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
 .featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -.05rem;
+	font-weight: 300;
+	line-height: 1;
+	letter-spacing: -.05rem;
 }
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
 @media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
+	/* Bump up size of carousel content */
+	.carousel-caption p {
+		margin-bottom: 1.25rem;
+		font-size: 1.25rem;
+		line-height: 1.4;
+	}
 
-  .featurette-heading {
-    font-size: 50px;
-  }
+	.featurette-heading {
+		font-size: 50px;
+	}
 }
 
 @media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem;
-  }
+	.featurette-heading {
+		margin-top: 7rem;
+	}
 }
 
 .jumbotron {
-  /* padding: 2rem 1rem; */
-  margin-bottom: 0rem !important; 
-  background-color: #e9ecef;
-  border-radius: 0rem !important;
+	/* padding: 2rem 1rem; */
+	margin-bottom: 0rem !important;
+	background-color: #e9ecef;
+	border-radius: 0rem !important;
 }
 
 .main-container {
-  padding-top: 3rem;
+	padding-top: 3rem;
 }
 
 .container {
-  max-width: 960px;
+	max-width: 960px;
 }
 
 /*
@@ -311,19 +321,68 @@ body {
  */
 
 .flex-equal > * {
-  -ms-flex: 1;
-  flex: 1;
+	-ms-flex: 1;
+	flex: 1;
 }
 @media (min-width: 768px) {
-  .flex-md-equal > * {
-    -ms-flex: 1;
-    flex: 1;
-  }
+	.flex-md-equal > * {
+		-ms-flex: 1;
+		flex: 1;
+	}
 }
 
-.overflow-hidden { overflow: hidden; }
+.overflow-hidden {
+	overflow: hidden;
+}
 
+div.gallery {
+	border: 1px solid #ccc;
+}
 
+div.gallery:hover {
+	border: 1px solid #777;
+}
 
+div.gallery img {
+	width: 100%;
+	height: auto;
+}
 
+div.desc {
+	padding: 15px;
+	text-align: center;
+	color: rgb(255, 255, 255);
+}
 
+* {
+	box-sizing: border-box;
+}
+
+.responsive {
+	padding: 0 6px;
+	float: left;
+	width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+	.responsive {
+		width: 49.99999%;
+		margin: 6px 0;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	.responsive {
+		width: 100%;
+	}
+}
+
+.clearfix:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+#gallery {
+	padding-top: 20px;
+}
